[package]
name = "tauri-plugin-hal-steamworks"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", ".github/", ".vscode/"]

[dependencies]
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
steamworks = { version = "0.11.0", features = ["serde", "raw-bindings"] }
tauri = { version = "1.4.0" }
tokio = { version = "1.38.0", features = ["sync"] }
