[package]
name = "tauri-plugin-hal-steamworks"
version = "0.0.4"
authors = [ "voidptr_t" ]
description = "Tauri plugin for steamworks that used in HAL"
edition = "2021"
rust-version = "1.76.0"
exclude = ["/examples", ".github/", ".vscode/"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/HALLauncher/hal-steam-tools"

[dependencies]
log = "0.4.21"
regex = "1.9.6"
serde = { version = "1.0.203", features = ["derive"] }
steamlocate = "1.2.1"
steamworks = { version = "0.11.0", features = ["serde", "raw-bindings"] }
tauri = { version = "1.4.0" }
tokio = { version = "1.38.0", features = ["full", "sync"] }
